fix alignment

--- a/src/components/set/style.css
+++ b/src/components/set/style.css
@@ -3,6 +3,8 @@
 }
 
 .set > div {
+  width: 100%;
+
   flex-grow: 1;
 
   text-align: center;
